fix: fix gap

--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -6,7 +6,7 @@ form {
   height: 200px;
   border: 1px solid var(--grey-2);
   padding: 15px;
-  gap: 19px;
+  gap: 20px;
   font-family: "Inter", sans-serif;
 }
 
